--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -3,5 +3,6 @@
     <string-array name="pref_sort_order">
         <item>@string/sort_most_popular</item>
         <item>@string/sort_highest_rated</item>
+        <item>@string/favorite</item>
     </string-array>
 </resources>
