--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -5,6 +5,8 @@
         android:title="@string/pref_sort_order_label"
         android:key="@string/pref_sort_order_key"
         android:defaultValue="@string/sort_most_popular"
+        android:summary="@string/pref_summary"
+        android:dialogTitle="@string/pref_sortBy_title"
         android:entries="@array/pref_sort_order"
         android:entryValues="@array/pref_sort_order">
 
