--- a/app/src/main/res/layout/trailer_card.xml
+++ b/app/src/main/res/layout/trailer_card.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:adjustViewBounds="true"
-    android:background="@color/viewBG">
+    android:background="@color/viewBg">
 
     <android.support.v7.widget.CardView
         android:id="@+id/card_view"
@@ -17,7 +17,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/viewBG">
+            android:background="@color/viewBg">
 
             <ImageView
                 android:layout_width="50dp"
@@ -29,7 +29,6 @@
                 android:layout_alignParentTop="true"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"/>
-
 
             <TextView
                 android:id="@+id/title"
