--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,8 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string-array name="pref_sort_order">
+    <string-array name="pref_sortBy_entries">
         <item>@string/sort_most_popular</item>
         <item>@string/sort_highest_rated</item>
         <item>@string/favorite</item>
     </string-array>
+
+    <string-array name="pref_sortBy_values">
+        <item>@string/sort_most_popular</item>
+        <item>@string/sort_highest_rated</item>
+        <item>@string/favorite</item>
+    </string-array>
+
 </resources>
