--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -7,8 +7,7 @@
         android:defaultValue="@string/sort_most_popular"
         android:summary="@string/pref_summary"
         android:dialogTitle="@string/pref_sortBy_title"
-        android:entries="@array/pref_sort_order"
-        android:entryValues="@array/pref_sort_order">
-
+        android:entries="@array/pref_sortBy_entries"
+        android:entryValues="@array/pref_sortBy_values">
     </ListPreference>
 </PreferenceScreen>
