--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,32 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-
     <item
-        android:id="@+id/action_sort_by"
-        android:title="@string/pref_sort_order_label"
-        android:icon="@drawable/sort"
-        app:showAsAction="always">
-        <!-- movies submenu -->
-        <menu>
-            <group
-                android:id="@+id/menu_sort_group"
-                android:checkableBehavior="single">
-
-                <item
-                    android:id="@+id/most_popular_movies"
-                    android:checked="true"
-                    android:title="@string/sort_most_popular" />
-
-                <item
-                    android:id="@+id/highest_top_rated"
-                    android:title="@string/sort_highest_rated" />
-
-                <item
-                    android:id="@+id/favorite_movies"
-                    android:title="@string/favorite" />
-            </group>
-        </menu>
-    </item>
+        android:id="@+id/menu_settings"
+        android:title="@string/action_setting"
+        android:orderInCategory="100"
+        app:showAsAction="never" />
 
 </menu>
