--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,12 +3,12 @@
     <dimen name="Horizental_margin">16dp</dimen>
     <dimen name="Vertical_margin">16dp</dimen>
     <dimen name="title_padding">10dp</dimen>
-    <dimen name="title">15dp</dimen>
+    <dimen name="title">15sp</dimen>
     <dimen name="Cover_height">160dp</dimen>
     <dimen name="card_radius">0dp</dimen>
     <dimen name="card_margin">5dp</dimen>
     <dimen name="user_rating_btn">5dp</dimen>
-    <dimen name="user_rating">12dp</dimen>
+    <dimen name="user_rating">12sp</dimen>
     <dimen name="details_backdrop_height">500dp</dimen>
     <dimen name="layout_margin_left">10dp</dimen>
     <dimen name="layout_margin_top">3dp</dimen>
