--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,10 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <item
-        android:id="@+id/menu_settings"
-        android:title="@string/action_setting"
+        android:id="@+id/menu_most_popular"
         android:orderInCategory="100"
+        android:title="@string/most_popular"
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/menu_top_rated"
+        android:orderInCategory="200"
+        android:title="@string/top_rated"
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/menu_favorites"
+        android:orderInCategory="300"
+        android:title="@string/favorites"
         app:showAsAction="never" />
 
 </menu>
