--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,19 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="Horizental_margin">16dp</dimen>
-    <dimen name="Vertical_margin">16dp</dimen>
-    <dimen name="title_padding">10dp</dimen>
-    <dimen name="title">15sp</dimen>
-    <dimen name="Cover_height">160dp</dimen>
-    <dimen name="card_radius">0dp</dimen>
-    <dimen name="card_margin">5dp</dimen>
-    <dimen name="user_rating_btn">5dp</dimen>
-    <dimen name="user_rating">12sp</dimen>
-    <dimen name="details_backdrop_height">500dp</dimen>
-    <dimen name="layout_margin_left">10dp</dimen>
-    <dimen name="layout_margin_top">3dp</dimen>
-    <dimen name="layout_margin_top2">10dp</dimen>
-    <dimen name="padding_layout">16dp</dimen>
-    <item name="low_speed" type="dimen" format="float">120</item>
-    <item name="normal_speed" type="dimen" format="float">100</item>
+    <dimen name="app_bar_height">300dp</dimen>
+    <dimen name="horizontal_margin">16dp</dimen>
+    <dimen name="vertical_margin_small">4dp</dimen>
+    <dimen name="vertical_margin_medium">8dp</dimen>
+    <dimen name="vertical_margin_large">32dp</dimen>
+    <dimen name="text_size_large">32sp</dimen>
+    <dimen name="elevation_small">4dp</dimen>
+    <dimen name="elevation_medium">6dp</dimen>
+    <dimen name="layout_height_medium">48dp</dimen>
+    <dimen name="trailer_width">160dp</dimen>
 </resources>
